Fixed font color for website for better readability

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ font-family: 'Vollkorn', serif;
 }
 
 #mainNavigation a:hover{
-color: blue;
+color: yellow;
 background-color: black;
 }
 
@@ -72,7 +72,7 @@ color: yellow;
 }
 
 .linkColors a:hover{
-color: blue;
+color: yellow;
 background-color: white;
 }
 
